--- a/index.html
+++ b/index.html
@@ -587,7 +587,111 @@
             </li>
           </ul>
         </div>
+
+        <div class="form-footer">
+          <p class="form-footer-txt">Subscribe</p>
+          <form class="form" action="#">
+            <label class="form-label" for="username">
+              <input
+                class="form-input"
+                id="username"
+                name="username"
+                type="email"
+                placeholder="E-mail"
+              />
+            </label>
+            <button class="form-btn" type="submit">
+              Subscribe<svg class="form-svg" width="24" height="24">
+                <use href="./images/icons.svg#icon-send"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
+    <div class="backdrop is-open">
+      <div class="modal">
+        <button class="btn-modal" type="button">
+          <svg class="form-svg-close" width="8" height="8">
+            <use href="./images/icons.svg#icon-close"></use>
+          </svg>
+        </button>
+        <p class="p-modal">Leave your contacts and we will call you back</p>
+        <form action="#">
+          <div class="div-form-modal">
+            <label class="label_modal" for="user-name">Name</label>
+            <div class="div-input">
+              <input
+                class="input-modal"
+                type="text"
+                id="user-name"
+                name="user-name"
+              />
+              <svg class="input-svg" width="18" height="24">
+                <use href="./images/icons.svg#icon-person"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="div-form-modal">
+            <label class="label-modal" for="phone">Phone</label>
+            <div class="div-input">
+              <input
+                class="input-modal"
+                type="text"
+                id="phone"
+                name="user-name"
+              />
+              <svg class="input-svg" width="18" height="24">
+                <use href="./images/icons.svg#icon-phone"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="div-form-modal">
+            <label class="label-modal" for="email">Email</label>
+            <div class="div-input">
+              <input
+                class="input-modal"
+                type="text"
+                id="email"
+                name="user-name"
+              />
+              <svg class="input-svg" width="18" height="24">
+                <use href="./images/icons.svg#icon-email "></use>
+              </svg>
+            </div>
+          </div>
+
+          <div class="comment">
+            <label class="label-modal" for="user-comment">Comment</label>
+            <textarea
+              class="comment-txt"
+              name="user-comment"
+              id="user-comment"
+              placeholder="Text input"
+              cols="30"
+              rows="10"
+            ></textarea>
+          </div>
+
+          <div class="check">
+            <input
+              class="visually-hidden"
+              type="checkbox"
+              id="user-privacy"
+              value="true"
+              name="user-privacy"
+            />
+            <label class="label-check" for="user-privacy">
+              <span class="label-span">
+                <svg class="label-svg" width="10" height="8">
+                  <use href="./images/icons.svg#icon-check"></use></svg></span
+              >I accept the terms and conditions of the
+              <a class="label-privacy" href="">Privacy Policy</a></label
+            >
+          </div>
+          <button class="send-btn">Send</button>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
