--- a/index.html
+++ b/index.html
@@ -619,7 +619,7 @@
         <p class="p-modal">Leave your contacts and we will call you back</p>
         <form action="#">
           <div class="div-form-modal">
-            <label class="label_modal" for="user-name">Name</label>
+            <label class="label-modal" for="user-name">Name</label>
             <div class="div-input">
               <input
                 class="input-modal"
